force-app/main/default/objects/Shopping_List_Item__c/Shopping_List_Item__c.object-meta.xml
<CustomObject>
    <label>Shopping List Item</label>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>Shopping List Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>