force-app/main/default/objects/Shopping_List_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Meat &amp; Seafood</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
                <default>true</default>
                <label>Pantry</label>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Pet Food</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Condiments &amp; Sauces</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>