force-app/main/default/objects/Shopping_List_Item__c/fields/Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Amount__c</fullName>
    <label>Coupon Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>