force-app/main/default/objects/Shopping_List_Item__c/fields/Coupon_Available__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coupon Available</label>
    <type>Checkbox</type>
</CustomField>