force-app/main/default/objects/Shopping_List_Item__c/fields/Coupon_Discount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount__c</fullName>
    <inlineHelpText>The discount amount from matched coupon</inlineHelpText>
    <label>Coupon Discount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>