force-app/main/default/objects/Shopping_List_Item__c/fields/Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Price__c</fullName>
    <label>Estimated Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>