force-app/main/default/objects/Shopping_List_Item__c/fields/Is_On_Sale__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Sale</label>
    <type>Checkbox</type>
</CustomField>