force-app/main/default/objects/Shopping_List_Item__c/fields/Is_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Is_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Purchased</label>
    <type>Checkbox</type>
</CustomField>