force-app/main/default/objects/Shopping_List_Item__c/fields/Matched_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Matched_Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The coupon matched to this shopping list item</inlineHelpText>
    <label>Matched Coupon</label>
    <referenceTo>Store_Coupon__c</referenceTo>
    <relationshipLabel>Shopping List Items</relationshipLabel>
    <relationshipName>Shopping_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>