force-app/main/default/objects/Shopping_List_Item__c/fields/Shopping_List__c.field-meta.xml
<CustomField>
    <fullName>Shopping_List__c</fullName>
    <label>Shopping List</label>
    <referenceTo>Shopping_List__c</referenceTo>
    <relationshipLabel>Shopping List Items</relationshipLabel>
    <relationshipName>Shopping_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>