force-app/main/default/objects/Shopping_List_Item__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <inlineHelpText>The store where this item will be purchased</inlineHelpText>
    <label>Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>