force-app/main/default/objects/Shopping_List_Item__c/fields/Store_Section__c.field-meta.xml
<CustomField>
    <fullName>Store_Section__c</fullName>
    <label>Store Section</label>
    <length>60</length>
    <type>Text</type>
</CustomField>