force-app/main/default/objects/Shopping_List_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lb</fullName>
            </value>
            <value>
                <fullName>oz</fullName>
            </value>
            <value>
                <fullName>cup</fullName>
            </value>
            <value>
                <fullName>tbsp</fullName>
            </value>
            <value>
                <fullName>tsp</fullName>
            </value>
            <value>
                <fullName>gallon</fullName>
            </value>
            <value>
                <fullName>quart</fullName>
            </value>
            <value>
                <fullName>pint</fullName>
            </value>
            <value>
                <fullName>each</fullName>
                <default>true</default>
                <label>each</label>
            </value>
            <value>
                <fullName>package</fullName>
            </value>
            <value>
                <fullName>bag</fullName>
            </value>
            <value>
                <fullName>box</fullName>
            </value>
            <value>
                <fullName>can</fullName>
            </value>
            <value>
                <fullName>jar</fullName>
            </value>
            <value>
                <fullName>bottle</fullName>
            </value>
            <value>
                <fullName>bunch</fullName>
            </value>
            <value>
                <fullName>clove</fullName>
            </value>
            <value>
                <fullName>pinch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>